[gd_scene load_steps=3 format=2]

[ext_resource path="res://Materiais/Imagens/Cazumbar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Grajau0.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Cazumbar" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="voltar" type="TextureButton" parent="."]
margin_top = 4.0
margin_right = 122.0
margin_bottom = 62.0

[node name="pista1" type="TextureButton" parent="."]
margin_left = 42.0
margin_top = 135.0
margin_right = 167.0
margin_bottom = 200.0

[node name="pista2" type="TextureButton" parent="."]
margin_left = 44.0
margin_top = 206.0
margin_right = 169.0
margin_bottom = 271.0

[node name="pista3" type="TextureButton" parent="."]
margin_left = 47.0
margin_top = 286.0
margin_right = 172.0
margin_bottom = 351.0

[node name="cazumbar" type="TextureButton" parent="."]
margin_left = 41.0
margin_top = 355.0
margin_right = 166.0
margin_bottom = 420.0

[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="pista1" to="." method="_on_pista1_pressed"]
[connection signal="pressed" from="pista2" to="." method="_on_pista2_pressed"]
[connection signal="pressed" from="pista3" to="." method="_on_pista3_pressed"]
[connection signal="pressed" from="cazumbar" to="." method="_on_cazumbar_pressed"]
